# gee-documentation

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/api-reference/: authentication-methods.rst  common-functions.rst  index.rst
docs/authentication/: colab-auth.rst  index.rst  interactive-auth.rst  service-account-auth.rst  troubleshooting.rst
docs/examples/: index.rst
docs/examples/advanced/: batch-processing.rst  custom-algorithms.rst  index.rst  machine-learning.rst
docs/examples/basic/: first-script.rst  index.rst  simple-calculations.rst
docs/getting-started/: account-creation.rst  cloud-project-setup.rst  git-setup.rst  index.rst  verification.rst
examples/advanced/: 01_machine_learning.py  02_batch_processing.py  03_custom_algorithms.py
examples/basic/: 01_hello_world.py  02_image_display.py  03_simple_calculations.py
